
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int sun ;
struct sockaddr_un {int * sun_path; int sun_family; } ;
struct sockaddr {int dummy; } ;


 int AF_UNIX ;
 int PF_UNIX ;
 int SHUT_RDWR ;
 int SOCK_STREAM ;
 int alarm (int) ;
 int bind (int,struct sockaddr*,int) ;
 int connect (int,struct sockaddr*,int) ;
 int getpid () ;
 int listen (int,int) ;
 int memset (struct sockaddr_un*,int ,int) ;
 int perror (char*) ;
 int puts (char*) ;
 int shutdown (int,int ) ;
 int socket (int ,int ,int ) ;
 int sprintf (int *,char*,int) ;

int main(void)
{
 int ret;
 int csd;
 int lsd;
 struct sockaddr_un sun;


 memset(&sun, 0, sizeof(sun));
 sun.sun_family = PF_UNIX;
 sprintf(&sun.sun_path[1], "%d", getpid());


 lsd = socket(AF_UNIX, SOCK_STREAM, 0);
 bind(lsd, (struct sockaddr *)&sun, sizeof(sun));
 listen(lsd, 1);
 shutdown(lsd, SHUT_RDWR);


 alarm(15);
 for (;;) {
  csd = socket(AF_UNIX, SOCK_STREAM, 0);
  ret = connect(csd, (struct sockaddr *)&sun, sizeof(sun));
  if (-1 == ret) {
   perror("connect()");
   break;
  }
  puts("Connection OK");
 }
 return 0;
}
